--- a/campers.yml
+++ b/campers.yml
@@ -21,7 +21,7 @@
   project status: 'in progress'
   stats:
     - 1 fishing pole broken
-    - 2 ears saved from hearing damage
+    - 2 eardrums saved from hearing damage
 
 - name: Corey
   project: Work User Manual
