--- a/campers.yml
+++ b/campers.yml
@@ -59,5 +59,5 @@
   project description: Advaned AI analytics to find the best applicant for your job.
   project status: 'in progress'
   stats:
-    - 98 kosher sausages consumed
+    - 1094 nazi zombies killed
 
