--- a/campers.yml
+++ b/campers.yml
@@ -12,7 +12,7 @@
   project description: AI generated scripts for cold calling
   project status: 'in progress'
   stats:
-    - 420 quickscopes
+    - 420 quickscopes landed
     - 43 sales anecdotes told
 
 - name: Chris
