--- a/campers.yml
+++ b/campers.yml
@@ -33,7 +33,7 @@
 
 - name: Jonathan
   project: ???
-  project description: Get back into working out, even if you don't know what to do.
+  project description: IOS app to help you get back into working out, even if you don't know what to do.
   project status: 'in progress'
   stats:
     - 1 half-day taken
